gap fix

--- a/scss/screen-sizes/tablet/_tablet.scss
+++ b/scss/screen-sizes/tablet/_tablet.scss
@@ -495,8 +495,9 @@ h2 {
         margin: 40px auto 0 auto;
 
         @supports not (gap: 20px) {
-            > *:not(:last-child) {
-                margin: 10px;
+            > *:not(:first-child) {
+                margin-left: 20px;
+                margin-bottom: 20px;
             }
         }
 
